--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
 
     <groupId>tech.xigam</groupId>
     <artifactId>Express.Java</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     
     <!-- 
     Changelog:
     1.0.0 - Initial release.
     1.1.0 - Add support for other HTTP servers & support SSL by default.
     1.2.0 - Add support for more response functionality.
+    1.2.1 - Fix bug with responses.
     -->
 
     <name>Express.Java</name>
